# Particles

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  particles.sln
.github/workflows/: ci.yml  codeql.yml  gh-pages.yml  release.yml
Debug/: particles.ilk
NeHe'sparticles/: particles.cpp  particles.vcxproj  particles.vcxproj.filters
NeHe'sparticles/Debug/: vc140.idb
NeHe'sparticles/Debug/particles.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  particles.lastbuildstate
allParticles/: Lesson19.sln  UpgradeLog.htm  X-Men.cpp  butterfly.cpp  lesson19.plg  lesson19.vcxproj  lesson19.vcxproj.filters  particles.cpp  starCross.cpp  stars.cpp  torchLight.cpp
allParticles/Debug/: lesson19.ilk  vc140.idb
allParticles/Debug/lesson19.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lesson19.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
common/: app.cpp  app.h  color.h  particle.cpp  particle.h  renderer_modern.cpp  renderer_modern.h  texture.cpp  texture.h
demos/: X-Men.cpp  butterfly.cpp  explosion.cpp  fire.cpp  fountain.cpp  galaxy.cpp  particles.cpp  snow.cpp  starCross.cpp  stars.cpp  torchLight.cpp
qa/: render_demo_snapshots.cpp
shaders/: particle.frag  particle.vert
tests/: CMakeLists.txt  physics_test.cpp
